--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="kolorki.css">
 </head>
 <body>
-<img src="./obrazki/epizod1.jpg" id="obraz">
-<input type="button" onclick="nastepnyObraz()" value="nastepny">
-<input type="button" onclick="poprzedniObraz()" value="poprzedni">
-<input type="button" onclick="instrukcja()" value="instrukcja">
-<p id="numerObrazu">1</p>
+<img src="./obrazki/epizod1.jpg" id="obraz" class="center">
+<input type="button" onclick="poprzedniObraz()" value="⬅" class="mainbuttons">
+<input type="button" onclick="nastepnyObraz()" value="➡" class="mainbuttons">
+<input type="button" onclick="instrukcja()" value="🛈" class="mainbuttons">
+<p id="numerObrazu" class="center">1</p>
 </body>
 </html>
 <script src="mleko.js"></script>
