--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <title>Bob mleczarz</title>
     <link rel="icon" href="icon.ico">
     <link rel="stylesheet" href="kolorki.css">
+    <img src="./baner.png" id="baner" class="baner">
 </head>
 <body>
+<a href="./index.html" class="center">Głowna</a><a href="./about.html" class="center">O stronie</a>
 <img src="./obrazki/epizod1.jpg" id="obraz" class="center">
-<input type="button" onclick="poprzedniObraz()" value="⬅" class="mainbuttons">
 <input type="button" onclick="nastepnyObraz()" value="➡" class="mainbuttons">
+<input type="button" onclick="poprzedniObraz()" value="⬅" class="mainbuttons">
 <input type="button" onclick="instrukcja()" value="🛈" class="mainbuttons">
 <p id="numerObrazu" class="center">1</p>
 </body>
