fixed buttons, layout, added about page

--- a/about.html
+++ b/about.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About Bob</title>
+    <link rel="icon" href="./icon.ico">
+    <link rel="stylesheet" href="./kolorki.css">
 </head>
 <body>
-    <p>O stronie</p> 
+    <img src="./baner.png" id="baner" class="baner">
+    <br>
+    <a>[</a>
+    <a href="./index.html" class="center">Głowna</a>
+    <a>/</a>
+    <a href="./about.html" class="center">O stronie</a>
+    <a>]</a>
+    <br>
+    <br>
+    <header style="font-size: larger; color: lightcoral;">Bob mleczarz</header>
+    <p>to komiks o skomplikowanej fabule tworzony przez <b>Bald2beMan</b> od stycznia 2022 roku.
+    <br>
+    Pierwsze szkice pojawiły się w zeszycie od fizyki.
+    <br>
+    kodzie strony pomógł <b>Skibi</b>, a w fabule wspiera <b>Pablo</b>.
+    <br>
+    Polecam przeczytać całość, bo można nie ogarniać co się dzieje.
+    <br>
+    W roku 2024 nastąpiła rewizja strony.</p>
 </body>
 </html>
