--- a/about.html
+++ b/about.html
@@ -10,22 +10,37 @@
 <body>
     <img src="./baner.png" id="baner" class="baner">
     <br>
-    <a>[</a>
-    <a href="./index.html" class="center">Głowna</a>
-    <a>/</a>
-    <a href="./about.html" class="center">O stronie</a>
-    <a>]</a>
-    <br>
-    <br>
-    <header style="font-size: larger; color: lightcoral;">Bob mleczarz</header>
-    <p>to komiks o skomplikowanej fabule tworzony przez <b>Bald2beMan</b> od stycznia 2022 roku.
-    <br>
-    Pierwsze szkice pojawiły się w zeszycie od fizyki.
-    <br>
-    kodzie strony pomógł <b>Skibi</b>, a w fabule wspiera <b>Pablo</b>.
-    <br>
-    Polecam przeczytać całość, bo można nie ogarniać co się dzieje.
-    <br>
-    W roku 2024 nastąpiła rewizja strony.</p>
+    <div class="reader">
+        <a>[</a>
+        <a href="./index.html" class="center">Głowna</a>
+        <a>/</a>
+        <a href="./about.html" class="center">O stronie</a>
+        <a>]</a>
+        <br>
+        <br>
+        <header style="font-size: xx-large; color: lightcoral;"><b>B O B<br>M L E C Z A R Z</b></header>
+        <p>to komiks o skomplikowanej fabule tworzony przez <b>Bald2beMan</b> od stycznia 2022 roku.
+        <br>
+        Pierwsze szkice pojawiły się w zeszycie od fizyki.
+        <br>
+        kodzie strony pomógł <b>Skibi</b>, a w fabule wspiera <b>Pablo</b>.
+        <br>
+        Polecam przeczytać całość, bo można nie ogarniać co się dzieje.
+        <br>
+        W roku 2024 nastąpiła rewizja strony.</p>
+    </div>
+    <img src="./about.jpg" class="reader">
+<div class="footer">
+        <table>
+            <tr>
+                <td>
+                    <a href="https://www.youtube.com/channel/UCOIcSBqEA_W5edOpt97lVEA" target="_blank" rel="noopener noreferrer"><img title="Kliknij" style="border-radius: 10%;" src="./logo.jpg" height="70" width="70"></a>
+                </td>
+                <td>
+                    <p>Autor: Bald2beMan</p>
+                </td>
+            </tr>
+        </table>
+</div>
 </body>
 </html>
