colors, fixed buttons

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <br>
     <div class="reader">
         <a>[</a>
-        <a href="./index.html" class="center">Głowna</a>
+        <a href="./index.html" class="center">Główna</a>
         <a>/</a>
         <a href="./about.html" class="center">O stronie</a>
         <a>]</a>
@@ -23,7 +23,7 @@
         <br>
         Pierwsze szkice pojawiły się w zeszycie od fizyki.
         <br>
-        kodzie strony pomógł <b>Skibi</b>, a w fabule wspiera <b>Pablo</b>.
+        W kodzie strony pomaga <b>Skibi</b>, a w fabule wspiera <b>Pablo</b>.
         <br>
         Polecam przeczytać całość, bo można nie ogarniać co się dzieje.
         <br>
