new episodes, changelog, better footer

--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
     <span>】</span>
     </div>
     <br>
-    <br>
+    <div class="changelog-container">
+        <div class="changelog">
+            <p>Dodane epizody 43 - 49</p>
+            <p>Kompletna rewizja strony</p>
+            <p>Świętujemy epizod 50</p>
+            <p>00.02.2024</p>
+        </div>
+    </div>
     <main>
         <img src="./obrazki/epizod1.jpg" id="obraz" class="reader" alt="Strona komiksu">
         <nav>
@@ -91,20 +98,19 @@
                     <input type="button" onclick="epizod(41)" value="Epizod 41" alt="Epizod 41" class="button">
                     <input type="button" onclick="epizod(42)" value="Epizod 42" alt="Epizod 42" class="button">
                 </div>
+                <input type="button" onclick="epizod(43)" value="Epizod 43" alt="Epizod 43" class="button">
+                <input type="button" onclick="epizod(44)" value="Epizod 44" alt="Epizod 44" class="button">
+                <input type="button" onclick="epizod(45)" value="Epizod 45" alt="Epizod 45" class="button">
+                <div class="razem">
+                    <input type="button" onclick="epizod(46)" value="Epizod 46" alt="Epizod 46" class="button">
+                    <input type="button" onclick="epizod(47)" value="Epizod 47" alt="Epizod 47" class="button">
+                    <input type="button" onclick="epizod(48)" value="Epizod 48" alt="Epizod 48" class="button">
+                </div>
             </section>
         </nav>
     </main>
     <div class="footer">
-        <table>
-            <tr>
-                <td>
-                    <a href="https://www.youtube.com/channel/UCOIcSBqEA_W5edOpt97lVEA" target="_blank" rel="noopener noreferrer"><img title="Kliknij" style="border-radius: 10%;" src="./logo.jpg" height="70" width="70"></a>
-                </td>
-                <td>
-                    <p>Autor: Bald2beMan</p>
-                </td>
-            </tr>
-        </table>
+        <a href="https://www.youtube.com/channel/UCOIcSBqEA_W5edOpt97lVEA" target="_blank" rel="noopener noreferrer">- 𝙱𝚊𝚕𝚍𝟸𝚋𝚎𝙼𝚊𝚗 -</a>
     </div>
     </body>
     </html>
