quick fix buttons

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                     <input type="button" onclick="poprzedniObraz()" value="⬅" id="lewo" class="navbuttons" alt="Zmien na następny obraz">
                     <input type="button" onclick="nastepnyObraz()" value="➡" id="prawo" class="navbuttons" alt="Zmien na poprzedni obraz">
                 </div>
-                <input type="button" onclick="ostatniObraz()" value="ostatni" class="mainbuttons" alt="Ustaw ostatni obraz">
                 <input type="button" onclick="pierwszyObraz()" value="pierwszy" class="mainbuttons" alt="Ustaw pierwszy obraz">
-                <input type="button" onclick="instrukcja()" value="🛈" class="mainbuttons" alt="Instrukcja czytania boba">
+                <input type="button" onclick="instrukcja()" value="🛈" class="navbuttons" alt="Instrukcja czytania boba">
+                <input type="button" onclick="ostatniObraz()" value="ostatni" class="mainbuttons" alt="Ustaw ostatni obraz">
             </section>
             <section class="plansza">
                 <input type="button" onclick="epizod(1)" value="Epizod 1" alt="Epizod 1" class="button">
