--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="./index.html">Główna</a>
         <span>||</span>
         <a href="./about.html">O stronie</a>
-    <span>】</span>
+        <span>】</span>
     </div>
     <br>
     <div class="changelog-container">
@@ -53,64 +53,46 @@
                 <input type="button" onclick="epizod(11)" value="Epizod 11" alt="Epizod 11" class="button">
                 <input type="button" onclick="epizod(12)" value="Epizod 12" alt="Epizod 12" class="button">
                 <input type="button" onclick="epizod(13)" value="Epizod 13" alt="Epizod 13" class="button">
-                <div class="razem">
-                    <input type="button" onclick="epizod(14)" value="Epizod 14" alt="Epizod 14" class="button">
-                    <input type="button" onclick="epizod(15)" value="Epizod 15" alt="Epizod 15" class="button">
-                    <input type="button" onclick="epizod(16)" value="Epizod 16" alt="Epizod 16" class="button">
-                </div>
+                <input type="button" onclick="epizod(14)" value="Epizod 14" alt="Epizod 14" class="button">
+                <input type="button" onclick="epizod(15)" value="Epizod 15" alt="Epizod 15" class="button">
+                <input type="button" onclick="epizod(16)" value="Epizod 16" alt="Epizod 16" class="button">
                 <input type="button" onclick="epizod(17)" value="Epizod 17" alt="Epizod 17" class="button">
-                <div class="razem">
-                    <input type="button" onclick="epizod(18)" value="Epizod 18" alt="Epizod 18" class="button">
-                    <input type="button" onclick="epizod(19)" value="Epizod 19" alt="Epizod 19" class="button">
-                    <input type="button" onclick="epizod(20)" value="Epizod 20" alt="Epizod 20" class="button">
-                </div>
+                <input type="button" onclick="epizod(18)" value="Epizod 18" alt="Epizod 18" class="button">
+                <input type="button" onclick="epizod(19)" value="Epizod 19" alt="Epizod 19" class="button">
+                <input type="button" onclick="epizod(20)" value="Epizod 20" alt="Epizod 20" class="button">
                 <input type="button" onclick="epizod(21)" value="Epizod 21" alt="Epizod 21" class="button">
-                <div class="razem">
-                    <input type="button" onclick="epizod(22)" value="Epizod 22" alt="Epizod 22" class="button">
-                    <input type="button" onclick="epizod(23)" value="Epizod 23" alt="Epizod 23" class="button">
-                </div>
+                <input type="button" onclick="epizod(22)" value="Epizod 22" alt="Epizod 22" class="button">
+                <input type="button" onclick="epizod(23)" value="Epizod 23" alt="Epizod 23" class="button">
                 <input type="button" onclick="epizod(24)" value="Epizod 24" alt="Epizod 24" class="button">
                 <input type="button" onclick="epizod(25)" value="Epizod 25" alt="Epizod 25" class="button">
                 <input type="button" onclick="epizod(26)" value="Epizod 26" alt="Epizod 26" class="button">
-                <div class="razem">
-                    <input type="button" onclick="epizod(27)" value="Epizod 27" alt="Epizod 27" class="button">
-                    <input type="button" onclick="epizod(28)" value="Epizod 28" alt="Epizod 28" class="button">
-                    <input type="button" onclick="epizod(29)" value="Epizod 29" alt="Epizod 29" class="button">
-                </div>
-                <div class="razem">
-                    <input type="button" onclick="epizod(30)" value="Epizod 30" alt="Epizod 30" class="button">
-                    <input type="button" onclick="epizod(31)" value="Epizod 31" alt="Epizod 31" class="button">
-                    <input type="button" onclick="epizod(32)" value="Epizod 32" alt="Epizod 32" class="button">
-                    <input type="button" onclick="epizod(33)" value="Epizod 33" alt="Epizod 33" class="button">
-                </div>
-                <div class="razem">
-                    <input type="button" onclick="epizod(34)" value="Epizod 34" alt="Epizod 34" class="button">
-                    <input type="button" onclick="epizod(35)" value="Epizod 35" alt="Epizod 35" class="button">
-                </div>
-                <div class="razem">
-                    <input type="button" onclick="epizod(36)" value="Epizod 36" alt="Epizod 36" class="button">
-                    <input type="button" onclick="epizod(37)" value="Epizod 37" alt="Epizod 37" class="button">
-                    <input type="button" onclick="epizod(38)" value="Epizod 38" alt="Epizod 38" class="button">
-                    <input type="button" onclick="epizod(39)" value="Epizod 39" alt="Epizod 39" class="button">
-                </div>
-                <div class="razem">
-                    <input type="button" onclick="epizod(40)" value="Epizod 40" alt="Epizod 40" class="button">
-                    <input type="button" onclick="epizod(41)" value="Epizod 41" alt="Epizod 41" class="button">
-                    <input type="button" onclick="epizod(42)" value="Epizod 42" alt="Epizod 42" class="button">
-                </div>
+                <input type="button" onclick="epizod(27)" value="Epizod 27" alt="Epizod 27" class="button">
+                <input type="button" onclick="epizod(28)" value="Epizod 28" alt="Epizod 28" class="button">
+                <input type="button" onclick="epizod(29)" value="Epizod 29" alt="Epizod 29" class="button">
+                <input type="button" onclick="epizod(30)" value="Epizod 30" alt="Epizod 30" class="button">
+                <input type="button" onclick="epizod(31)" value="Epizod 31" alt="Epizod 31" class="button">
+                <input type="button" onclick="epizod(32)" value="Epizod 32" alt="Epizod 32" class="button">
+                <input type="button" onclick="epizod(33)" value="Epizod 33" alt="Epizod 33" class="button">
+                <input type="button" onclick="epizod(34)" value="Epizod 34" alt="Epizod 34" class="button">
+                <input type="button" onclick="epizod(35)" value="Epizod 35" alt="Epizod 35" class="button">
+                <input type="button" onclick="epizod(36)" value="Epizod 36" alt="Epizod 36" class="button">
+                <input type="button" onclick="epizod(37)" value="Epizod 37" alt="Epizod 37" class="button">
+                <input type="button" onclick="epizod(38)" value="Epizod 38" alt="Epizod 38" class="button">
+                <input type="button" onclick="epizod(39)" value="Epizod 39" alt="Epizod 39" class="button">
+                <input type="button" onclick="epizod(40)" value="Epizod 40" alt="Epizod 40" class="button">
+                <input type="button" onclick="epizod(41)" value="Epizod 41" alt="Epizod 41" class="button">
+                <input type="button" onclick="epizod(42)" value="Epizod 42" alt="Epizod 42" class="button">
                 <input type="button" onclick="epizod(43)" value="Epizod 43" alt="Epizod 43" class="button">
                 <input type="button" onclick="epizod(44)" value="Epizod 44" alt="Epizod 44" class="button">
                 <input type="button" onclick="epizod(45)" value="Epizod 45" alt="Epizod 45" class="button">
-                <div class="razem">
-                    <input type="button" onclick="epizod(46)" value="Epizod 46" alt="Epizod 46" class="button">
-                    <input type="button" onclick="epizod(47)" value="Epizod 47" alt="Epizod 47" class="button">
-                    <input type="button" onclick="epizod(48)" value="Epizod 48" alt="Epizod 48" class="button">
-                </div>
+                <input type="button" onclick="epizod(46)" value="Epizod 46" alt="Epizod 46" class="button">
+                <input type="button" onclick="epizod(47)" value="Epizod 47" alt="Epizod 47" class="button">
+                <input type="button" onclick="epizod(48)" value="Epizod 48" alt="Epizod 48" class="button">
             </section>
         </nav>
     </main>
     <div class="footer">
-        <a href="https://www.youtube.com/channel/UCOIcSBqEA_W5edOpt97lVEA" target="_blank" rel="noopener noreferrer">- 𝙱𝚊𝚕𝚍𝟸𝚋𝚎𝙼𝚊𝚗 -</a>
+        <a href="https://www.youtube.com/channel/UCOIcSBqEA_W5edOpt97lVEA" target="_blank" rel="noopener noreferrer">- Bald2beMan -</a>
     </div>
     </body>
     </html>
