--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <a href="./index.html">Główna</a>
         <span>||</span>
         <a href="./about.html">O stronie</a>
+        <span>||</span>
+        <a href="https://github.com/NapewnoScibi/lepszyBOB" target="_blank" rel="noopener noreferrer">Github</a>
         <span>】</span>
     </div>
     <br>
